# virtual-surround-manager

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  build_virtual_surround_manager.sh  de.berny23.virtual-surround-manager.desktop.in  de.berny23.virtual_surround_manager.desktop.in
.github/workflows/: appimage-build.yml
po/de/: virtual-surround-manager.po
po/fr/: virtual-surround-manager.po
po/it/: virtual-surround-manager.po
po/ru/: virtual-surround-manager.po
src/: CMakeLists.txt  Main.qml  frontend_manager.cpp  frontend_manager.h  main.cpp  pipewire_manager.cpp  pipewire_manager.h  settings.cpp  settings.h  tray_icon.cpp  tray_icon.h
src/assets/hrir_wav/: hesuvi_license.txt
src/qml/: CMakeLists.txt  Main.qml  Settings.qml
